--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" onunload="fetch(`/close`)">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css" >
+    <script src="{{url_for('static', filename='script.js')}}"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <span>hello world</span>
+
 </body>
 </html>
